examples/test/testpolicy2813.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2813
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key41: value43
      key20: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value47
          key32: value1
          key15: value4
      podSelector:
        matchLabels:
          key9: value37
          key22: value9
          key12: value43
